--- a/index.html
+++ b/index.html
@@ -17,10 +17,13 @@
             font-family: 'Arial', sans-serif;
         }
 
+        div {
+            text-align: center; /* Centramos el contenido */
+        }
+
         h1, h2 {
             color: white;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
-            text-align: center;
         }
 
         h1 {
@@ -39,7 +42,6 @@
             padding: 15px 30px;
             margin-top: 30px;
             border: none;
-            margin-left: 200px;
             background-color: #ff3366;
             color: white;
             cursor: pointer;
