--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
         }
 
         div {
-            text-align: center; /* Centramos el contenido */
+            display: flex;
+            flex-direction: column; /* Para apilar los elementos verticalmente */
+            align-items: center; /* Centra los elementos horizontalmente */
+            text-align: center; /* Alinea el texto al centro */
         }
 
         h1, h2 {
